IY Report: Checkpointing work

--- a/aber/IY_report/refs.bib
+++ b/aber/IY_report/refs.bib
@@ -6,12 +6,27 @@
     howpublished = "\url{http://www.isis.stfc.ac.uk/about/how-isis-works6313.html}",
 }
 
-@misc{mantidwebsite2014,
-    author = "Mantid Project.",
-    title = "Main Page",
-    month = "May",
-    year = "2014",
-    howpublished = "\url{http://www.mantidproject.org/Main_Page}",
+@article{mantid,
+    author    = "Mantid Project",
+    title     = "Mantid: Manipulation and Analysis Toolkit for Instrument Data",
+    year      = "2013",
+    doi  	  = "10.5286/SOFTWARE/MANTID",
+    url		  = "http://dx.doi.org/10.5286/SOFTWARE/MANTID"
+}
+
+@book{dssivia2011elementary,
+    author    = "D. S. Sivia",
+    title     = "Elementary Scattering Theory for X-ray and Neutron Users",
+    year      = "2011",
+    publisher = "OUP Oxford",
+}
+
+@book{fernandezalonso2013neutron,
+    author    = "Fernandez-Alonso, F. and Price, D. L.",
+    title     = "Neutron Scattering Fundermentals",
+    publisher = "Academic Press",
+    edition  = "1st",
+    year      = "2013",
 }
 
 @misc{msgwebsite2014,
@@ -20,6 +35,14 @@
     month = "May",
     year = "2014",
     howpublished = "\url{http://www.isis.stfc.ac.uk/groups/molecular-spectroscopy/molecular-spectroscopy-3384.html}",
+}
+
+@misc{mantid2014workflow,
+    author = "Mantid Project",
+    title = "Git Workflow",
+    month = "August",
+    year = "2014",
+    howpublished = "\url{http://www.mantidproject.org/Git_Workflow}",
 }
 
 @incollection{rpynn2008,
