--- a/aber/IY_report/refs.bib
+++ b/aber/IY_report/refs.bib
@@ -45,10 +45,56 @@
     howpublished = "\url{http://www.mantidproject.org/Git_Workflow}",
 }
 
+@misc{mantid2014algorithm,
+    author = "Mantid Project",
+    title = "Algorithms",
+    month = "August",
+    year = "2014",
+    howpublished = "\url{http://www.mantidproject.org/Algorithm}",
+}
+
+@misc{mantid2014workspace,
+    author = "Mantid Project",
+    title = "Workspace",
+    month = "August",
+    year = "2014",
+    howpublished = "\url{http://www.mantidproject.org/Workspace}",
+}
+
+@misc{opengenie2014main,
+    author = "Open Genie",
+    title = "Open Genie Homepage",
+    month = "August",
+    year = "2014",
+    howpublished = "\url{http://www.opengenie.org/Main_Page}",
+}
+
 @incollection{rpynn2008,
     author    = "R. Pynn",
 	title     = "Neutron Scattering: A Non-destructive Microscope for Seeing Inside Matter",
     booktitle = "Neutron Scattering Applications and Techniques",
     publisher = "Springer",
     year      = "2008",
+}
+
+@article{dssivia1992bayesian,
+  title={Bayesian analysis of quasielastic neutron scattering data},
+  author={Sivia, D.S. and Carlile, C.J. and Howells, W.S. and K{\"o}nig, S.},
+  journal={Physica B: Condensed Matter},
+  volume={182},
+  number={4},
+  pages={341--348},
+  year={1992},
+  publisher={Elsevier}
+}
+
+@article{mayers2012vesuvio,
+  title={The VESUVIO electron volt neutron spectrometer},
+  author={Mayers, J and Reiter, G},
+  journal={Measurement Science and Technology},
+  volume={23},
+  number={4},
+  pages={045902},
+  year={2012},
+  publisher={IOP Publishing}
 }
