IY Report: Checkpointing work.

--- a/aber/IY_report/refs.bib
+++ b/aber/IY_report/refs.bib
@@ -69,6 +69,14 @@
     howpublished = "\url{http://www.opengenie.org/Main_Page}",
 }
 
+@misc{mantid2014history,
+    author = "Github",
+    title = "Mantid Project: Nested History Detialed Design Document",
+    month = "August",
+    year = "2014",
+    howpublished = "\url{https://github.com/mantidproject/documents/blob/master/Design/Nested%20History%20Detailed%20Design%20Document.docx}",
+}
+
 @incollection{rpynn2008,
     author    = "R. Pynn",
 	title     = "Neutron Scattering: A Non-destructive Microscope for Seeing Inside Matter",
@@ -97,4 +105,15 @@
   pages={045902},
   year={2012},
   publisher={IOP Publishing}
+}
+
+@article{mayers2011calibration,
+  title={Calibration of an electron volt neutron spectrometer},
+  author={Mayers, J. and Adams, M.A.},
+  journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume={625},
+  number={1},
+  pages={47--56},
+  year={2011},
+  publisher={Elsevier}
 }
