Vesuvio Report: Add corrections from Matthew

--- a/RAL/vesuvio_report/vesuvio_report.tex
+++ b/RAL/vesuvio_report/vesuvio_report.tex
@@ -86,7 +86,7 @@ VESUVIO is an neutron spectrometer at the ISIS pulsed neutron source operating a
 \label{sec:introduction}
 \subsection{VESUVIO Overview}
 \label{subsec:VESUVIO-overview}
-VESUVIO is a deep inelastic neutron scattering spectrometer situated on the S2 beamline at ISIS with an operational energy range of 5-150 eV. The instrument utilises a indirect geometry design with the final energy being fixed at 4.89 eV \cite{mayers2011calibration} and consists of 64 Yttrium Aluminium Perovskite $\gamma$-ray forward scattering detectors in 8 separate banks and 132 $^6$Li doped glass scintillator back scattering detectors split into 3 banks. The final energy for both forward and back scattering detectors are determined using gold foils which have a large resonance peak at 4.9 eV $\pm$ 0.15 eV. 
+VESUVIO is a deep inelastic neutron scattering spectrometer situated on the S2 beamline at ISIS with an operational energy range of 5-150 eV. The instrument utilises a indirect geometry design and consists of 64 Yttrium Aluminium Perovskite $\gamma$-ray forward scattering detectors in 8 separate banks and 132 $^6$Li doped glass scintillator back scattering detectors split into 3 banks. The scattered neutron beam impinges onto the analyzer foil which provides the energy analysis by means of resonance absorption at a given resonance energy. For this purpose usually gold foils are employed which have a large energy resonance at 4.9 eV $\pm$ 0.15 eV. With this experimental arrangement, data collection necessarily involves foil cycling in both forward and backscattering geometries in order to obtain TOF data with and without energy selection, followed by a subtraction of these two data sets to obtain NCS spectra. In this context, it is worth emphasizing that the “foil-out” data set in every VESUVIO experiment is tantamount to a simultaneous ND measurement of the sample under investigation. On VESUVIO, two different final-energy-selection schemes are currently used, hereafter referred to as resonance-detector (RD) and resonance-filter (RF) configurations. The RD configuration employs the foil to define the energy o the scattered neutrons via resonant neutron absorption, and a γ -ray detector to probe the prompt cascade following the subsequent (n,γ ) reaction \cite{schooneveld2006foil}. At present, VESUVIO uses RD (RF) in forward (backscattering) geometries, respectively.
 
 \begin{figure}[H]
 \centering
@@ -95,7 +95,8 @@ VESUVIO is a deep inelastic neutron scattering spectrometer situated on the S2 b
 \label{fig:VESUVIO-diagram}
 \end{figure}
 
-The forward scattering detectors make use of the difference technique described in Ref. \cite{schooneveld2006foil} which use the gold foils both as detectors and energy selectors by detecting the $\gamma$-ray cascade emitted when a neutron is absorbed. The back scattering detectors utilise a similar process but use a double differencing technique described in Ref. \cite{seeger1985double}.
+For the RF configuration, the VESUVIO backscattering bank is equipped with Li-doped glass detectors only sensitive to neutrons \cite{seeger1985double} and the TOF spectra are obtained by taking the difference between “foil-in” and “foil-out” data, referred to as single difference (SD). To improve final-energy resolution, double-difference (DD) techniques have been implemented with three measurements, namely with no filter, a filter of thickness d1 and neutron absorption a A1(E1) and a filter of the same material of thickness d2 and absorption A2(E1). The energy resolution function is well approximated by a Voigt line shape where the Lorentzian contribution is largely removed by the DD technique VESUVIO is primarily designed to measure the atomic momentum distribution of atoms in condensed matter systems. Data analysis on VESUVIO relies on the accuracy of two approximation, namely the incoherent (INCA) and impulse approximation (IA). INCA implies that for incident neutron wavelengths much less than the d-spacing of the sample, atoms will scatter incoherently and the measured intensity is
+therefore the total sum of intensities for individual atoms in the sample \cite{fernandezalonso2013neutron}. IA effectively treats the scattering as single atom `billiard ball' scattering, with conservation of momentum and kinetic energy of and a neutron a single target atom, allowing the momentum distribution of a mass to be measured using the theory developped in Ref. \cite{mayers2012vesuvio}. NCS data contains a number of spectra each consisting of a series of peaks. Each of these peaks corresponds to a single atomic mass in the sample begins studied. The positions of the peaks in the spectrum are determined by the mass of the sample. The amplitude of each of the peaks is determined by an atom's mass and scattering cross section. Finally, the width of the peaks is determined by the momentum distribution of the mass. The goal of data analysis of VESUVIO data is to determine the shape and intensity of the peaks, thereby determining the momentum distributions of the atoms in the sample. \cite{mayers2010user}.
 
 VESUVIO is primarily designed to measure the atomic momentum distribution of atoms in condensed matter systems. Data analysis on VESUVIO relies on the accuracy of the impulse approximation which implies that for incident neutron wavelengths much less than the $d$-spacing of the sample, atoms will scatter incoherently and the measured intensity is therefore the total sum of intensities for individual atoms in the sample \cite{fernandezalonso2013neutron}. This effectively treats the scattering as single atom `billiard ball' scattering, with conservation of momentum and kinetic energy of and a neutron a single target atom, allowing the momentum distribution of a mass to be measured using the theory developed in Ref. \cite{mayers2004vesuvio}.
 
@@ -107,7 +108,15 @@ The Mantid development team in combination with VESUVIO instrument scientists ha
 
 \section{Viewing Data in Time-of-Flight}
 \label{sec:viewtof}
-The original data analysis package \cite{mayers2010user} used two separate commands to process the raw time-of-flight data, one for the front scattering detectors and one for the back scattering. In the Mantid implementation this has been replaced with a single algorithm called LoadVesuvio which performs all of the processing for raw files from the instrument. This includes options for handling each of the different foil positions and difference techniques available with VESUVIO \citep{schooneveld2006foil, mayers2004vesuvio} and handles the summing multiple runs. It also contains a flag for summing each spectrum in the desired range into a single spectrum. The results of this loading operation are output as a single workspace in Mantid with units in time-of-flight which can be plotted using both Mantid's in built visualisation tools and custom plotting commands described in \ref{sec:visualisation}.
+The original data analysis package \cite{mayers2010user} used two separate commands to process the raw time-of-flight data, one for the front scattering detectors and one for the back scattering. In the Mantid implementation this has been replaced with a single algorithm called LoadVesuvio which performs all of the processing for raw files from the instrument. This includes options for handling each of the different foil positions and difference techniques available with VESUVIO \citep{schooneveld2006foil, mayers2004vesuvio} and handles the summing multiple runs. It also contains a flag for summing each spectrum in the desired range into a single spectrum. The results of this loading operation are output as a single workspace in Mantid with units in time-of-flight which can be plotted using both Mantid's in built visualisation tools and custom plotting commands described in Ref. \ref{sec:visualisation}. Like all inelastic instruments at ISIS, VESUVIO uses time of flight measurements to determine the momentum and energy transfer to the neutron in each scattering event. The neutron counting chain assigns a time of flight to the arrival of each neutron at the detector.
+
+\begin{equation}
+\label{eq:time-of-flight}
+t = \frac{L_0}{v_0} + \frac{L_1}{v_1} + t_0
+\end{equation}
+
+L0 is the path length from source to sample, L1 that from sample to detector, v0 is the velocity of the incident neutron and v1 that of the scattered neutron. t0 is an offset from the true value of due to delays in the electronic counting chain. On VESUVIO the values of L0, L1, v1, t0 and the scattering angle can be characterised by a mean value, with an associated distribution about the mean. Given these mean values and the value of t assigned to the neutron, the incident velocity v0 of each neutron detected and hence the
+momentum and energy transfer in the scattering process can be determined from eq. \ref{eq:time-of-flight} above. The distributions of these parameters about their mean values determine the resolution function of the instrument. The main task instrument calibration procedure is to determine these distributions and store them in the instrument parameter (IP) file.
 
 \begin{figure}[H]
 \centering
@@ -140,7 +149,7 @@ The ncs.py module also provides a preprocessing function for further preparing t
 
 \section{Multiple Scattering and Gamma Background Corrections}
 \label{sec:corrections}
-The time-of-flight data loaded using the methods described in section \ref{sec:viewtof} need to be corrected to account for the effects of multiple scattering \citep{mayers2002multiple} and gamma background \citep{mayers2011calculation}. Currently, the multiple scattering corrections for VESUVIO in Mantid are under development and will be available in future releases.
+The time-of-flight data loaded using the methods described in section \ref{sec:viewtof} need to be corrected to account for the effects of multiple scattering \citep{mayers2002multiple} and gamma background \citep{mayers2011calculation}. Currently, the multiple scattering corrections for VESUVIO in Mantid are under development and will be available in future releases. When the secondary foil absorbs neutrons it also emits γ-rays, which can be registered by the YAP detectors. The residual background is non-zero because the intensity of these is different in the two positions occupied by the secondary foil. With the current arrangement of foils and detectors on VESUVIO the residual background is at the ~5\% level compared to the signal.
 
 Corrections for the gamma background are implemented using the Mantid algorithm framework as an algorithm called \textit{CalculateGammaBackground}. This takes a single workspace in time-of-flight, and a fit function describing the mass spectrum of the input data and a list of workspace indices to include as part of the correction. The fit function for the mass spectrum is typically one which has been created as part of the fit routines described in section \ref{sec:fitting}. This algorithm results in two workspaces: one that contains the calculated background and a copy of the input time-of-flight workspace with the background subtracted. This function loosely corresponds to the \textit{bcorr} command in the old data analysis package.
 
@@ -331,7 +340,7 @@ VESUVIO does not currently have any GUI support within Mantid. Focus on developm
 
 \item \textbf{Corrections:} The corrections tab would provide a user interface for calculating both multiple scattering and gamma background corrections and applying them to data loaded in the first tab.
 
-\item \textbf{Fitting:} The fitting interface is the most complex in the series. This will provide support for setting up a fit using the same procedures used in the ncs.py module, but in a more user friendly manner than the current implementation achieves. This would provide support for both the Gaussian and Gram-Charlier functions as well as the ability to set the intensity constraints and hermite coefficients.
+\item \textbf{Fitting:} The fitting interface is the most complex in the series. This will provide support for setting up a fit using the same procedures used in the ncs.py module, but in a more user friendly manner than the current implementation achieves. This would provide support for both the Gaussian and Gram-Charlier functions as well as the ability to set the intensity constraints and Hermite polynomial expansion coefficients.
 \end{itemize}
 
 This is simply a loose plan based on previous discussions. The number and function of the tabs on the interface may change as development progresses. A proper design cannot be produced until the underlying framework is finalised. For example, there is a currently goal to support fitting a sample directly in y-space. It may be possible to integrate this with the fitting tab mentioned above, or depending on requirements, may be split to a fourth tab. Global fitting may well also require yet another separate interface.
@@ -400,7 +409,7 @@ Name & Description \\ \hline
 \textit{function} & The function to use to fit this mass. Options are currently either \textit{Gaussian} or \textit{GramCharlier}. \\ \hline
 \textit{hermite\_coeffs} & Only applicable when using \textit{GramCharlier}. This is a list of coefficients for each mass being fitted. If set to one the term is included within the fit. If set to zero it is excluded from the fit\\ \hline
 \textit{k\_free} & Only applicable when using \textit{GramCharlier}. If this flag is set to true the FSE (``Final State Effects'') coefficient is not tied to a value. If false it is set to a value dependant on the \textit{sears\_flag}.\\ \hline
-\textit{sears\_flag} & Only applicable when using \textit{GramCharlier}. If the \textit{k\_free} flag is set to false, this flag will control what the FSE coefficient gets tied too. If set to one it is tied to $width\times\sqrt{\frac{2}{12}}$\\ \hline
+\textit{sears\_flag} & Only applicable when using \textit{GramCharlier}. If the \textit{k\_free} flag is set to false, this flag will control what the FSE coefficient gets tied too. If set to one it is tied to $width\times\sqrt{\frac{2}{12}}$ which is harmonic limit of the magnitude of the FSEs\\ \hline
 \end{tabular}
 \caption{Table listing the options for defining a mass to be fitted.}
 \label{table:mass-parameters}
